--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,13 @@
     <title>Prifina</title>
 
     <style>
+      body {
+        margin:0;
+        padding:0;
+      }
+      * {
+    box-sizing: border-box;
+    }
       /* Change the white to any color ;) */
       input:-webkit-autofill,
       input:-webkit-autofill:hover,
