logout & login debug option

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -16,4 +16,15 @@
   input:-webkit-autofill {
     -webkit-text-fill-color: #1e1d1d !important;
   }
+  p {
+    margin: 0;
+  }
+  body {
+  margin:0 !important;
+   padding:0 !important;
+  }
+
+  * {
+    box-sizing: border-box;
+    }
 </style>
