--- a/public/index.html
+++ b/public/index.html
@@ -128,25 +128,7 @@
     />
     <meta name="theme-color" content="#ffffff" />
     <script type="text/javascript">
-    const userAgent =
-      typeof window.navigator === "undefined" ? "" : navigator.userAgent;
-    const mobile = Boolean(
-      userAgent.match(
-        /Android|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile|WPDesktop/i
-      )
-    );
-
-    console.log('USER AGENT MOBILE',mobile);
-    //console.log("%REACT_APP_MOBILE_SITE%")
-    if (mobile) {
-    const maxD=Math.max(window.screen.availWidth,window.screen.availHeight);
-    const minD=Math.min(window.screen.availWidth,window.screen.availHeight);
-    if ( (minD/maxD)<0.70 ) {
-        //console.log('NOT TABLET....');
-       // window.location=window.location.protocol+'//%REACT_APP_MOBILE_SITE%/';
-    }
-    }
-   
+     var deviceFingerPrint="TERON-TEST";
 
     </script>
   </head>
