--- a/packages/dev-console/public/index.html
+++ b/packages/dev-console/public/index.html
@@ -127,53 +127,11 @@
       content="%PUBLIC_URL%/ms-icon-144x144.png"
     />
     <meta name="theme-color" content="#ffffff" />
-   
-
-<script type="text/javascript">
-  function getCanvasPrint() {
- 
- // create a canvas element
- var canvas = document.createElement('canvas');
- 
- // define a context var that will be used for browsers with canvas support
- var ctx;
- 
- // try/catch for older browsers that don't support the canvas element
- try {
- 
-   // attempt to give ctx a 2d canvas context value
-   ctx = canvas.getContext('2d');
- 
- } catch (e) {
- 
-   // return empty string if canvas element not supported
-   return "";
- }
- 
- // https://www.browserleaks.com/canvas#how-does-it-work
- // Text with lowercase/uppercase/punctuation symbols
- var txt = 'Prifina fingerprint';
- ctx.textBaseline = "top";
- // The most common type
- ctx.font = "14px 'Arial'";
- ctx.textBaseline = "alphabetic";
- ctx.fillStyle = "#f60";
- ctx.fillRect(125, 1, 62, 20);
- // Some tricks for color mixing to increase the difference in rendering
- ctx.fillStyle = "#069";
- ctx.fillText(txt, 2, 15);
- ctx.fillStyle = "rgba(102, 204, 0, 0.7)";
- ctx.fillText(txt, 4, 17);
- var fingerPrint=canvas.toDataURL();
- canvas.remove();
- return fingerPrint;
- }
- 
-   var deviceFingerPrint=getCanvasPrint();
- 
- 
-  </script>
-
+    <script type="text/javascript" src="fingerPrint.js"></script>
+    <script type="text/javascript" >
+    var deviceFingerPrint = getCanvasPrint();
+    //console.log("TRACKER ",deviceFingerPrint)
+  </script> 
 
   </head>
   <body>
