--- a/packages/desktop-app/public/index.html
+++ b/packages/desktop-app/public/index.html
@@ -50,6 +50,9 @@
       input:-webkit-autofill {
         -webkit-text-fill-color: #1e1d1d !important;
       }
+      p {
+        margin: 0;
+      }
     </style>
     <link
       rel="apple-touch-icon"
