page desc update

--- a/packages/dev-console/public/index.html
+++ b/packages/dev-console/public/index.html
@@ -10,10 +10,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Your Personal Data Engine" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -32,12 +29,12 @@
 
     <style>
       body {
-        margin:0;
-        padding:0;
+        margin: 0;
+        padding: 0;
       }
       * {
-    box-sizing: border-box;
-    }
+        box-sizing: border-box;
+      }
       /* Change the white to any color ;) */
       input:-webkit-autofill,
       input:-webkit-autofill:hover,
@@ -51,8 +48,8 @@
         -webkit-text-fill-color: #1e1d1d !important;
       }
       p {
-    margin: 0;
-  }
+        margin: 0;
+      }
     </style>
     <link
       rel="apple-touch-icon"
@@ -131,11 +128,10 @@
     />
     <meta name="theme-color" content="#ffffff" />
     <script type="text/javascript" src="fingerPrint.js"></script>
-    <script type="text/javascript" >
-    var deviceFingerPrint = getCanvasPrint();
-    //console.log("TRACKER ",deviceFingerPrint)
-  </script> 
-
+    <script type="text/javascript">
+      var deviceFingerPrint = getCanvasPrint();
+      //console.log("TRACKER ",deviceFingerPrint)
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
